--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,8 @@ RCON_PASSWORD=your_rcon_password
 DISCORD_TOKEN=your_discord_bot_token
 DISCORD_GUILD_ID=your_discord_guild_id
 DISCORD_ADMIN_CHANNEL_ID=your_discord_admin_channel_id
+DISCORD_ADMIN_ROLES=role_id_1,role_id_2,role_id_3
 
 # CRCON Settings
 CRCON_BASE_URL=http://your_crcon_host:port
 CRCON_API_TOKEN=your_crcon_api_token
-
-# Admin Role IDs (comma separated for multiple roles)
-DISCORD_ADMIN_ROLES=role_id_1,role_id_2,role_id_3RCON_HOST=your_rcon_host
-RCON_PORT=your_rcon_port
-RCON_PASSWORD=your_rcon_password
-DISCORD_TOKEN=your_discord_bot_token
-DISCORD_CHANNEL_ID=your_discord_channel_id
